--- a/angular-crud/package.json
+++ b/angular-crud/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "angular-crud",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,18 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.0",
-    "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.2.0",
     "@angular/compiler": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
-    "@angular/localize": "~11.2.0",
-    "@angular/material": "^11.2.2",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
